--- a/task.html
+++ b/task.html
@@ -273,6 +273,7 @@
 								</div>
 								<h3><span class="statistic-counter">75%</span>KNITTING</h3>
 								<p>Four dollar toast messenger bag green juice, organic cliche tofu synth small batch locavore austin. Squid mlkshk authe ntic pinterest, pour-over gastropub XOXO seitan sartorial humblebrag. </p>
+								<p>Four dollar toast messenger</p>
 							</div>
 						</div> 
                     </div>
